--- a/app/views/tempAutocomplete.html
+++ b/app/views/tempAutocomplete.html
@@ -1,12 +1,14 @@
 
 <!-- Search Autocomplete -->
-		<a class="autocompleteCustom">
+		<a class="autocompleteCustom" >
 		  <!-- <img ng-src="images/searchpin.png" style="margin-top:-2px; margin-right:5px !important; width:10px; height:17.5px;">  -->
 
 		  <!-- <img ng-src="images/searchpin.png" style="margin-top:-2px; margin-right:5px !important; width:10px; height:17.5px;">  -->
 
 		  <!-- iconic -->
-		  <span class="iconic-adjust-11 ion-ios-location" data-pack="ios" data-tags="navigation, map, gps, pin" style="margin-top:2px; margin-right:5px !important; color: #3d3d3d; opacity: .8;"></span>
+		  <!-- <span class="iconic-adjust-11 ion-ios-location" data-pack="ios" data-tags="navigation, map, gps, pin" style="margin-top:2px; margin-right:5px !important; color: #3d3d3d; opacity: .8;"></span> -->
+
+		  <span class="iconic-adjust-11 ion-ios-location" data-pack="ios" data-tags="navigation, map, gps, pin" style="margin-top:2px; margin-right:27px !important; color: #3d3d3d; opacity: .8;"></span>
 <!-- 
 
 width:10px; height:17.5px;
