--- a/app/views/tempResources.html
+++ b/app/views/tempResources.html
@@ -285,7 +285,7 @@
             </li> -->
 
 <!--             <li><a href="#" ng-click="">Night Mode <i class='ion-ios-moon-outline' style="position: absolute; right:25px; top:-9px; padding:5px !important; font-size:26px;" ></i></a>  </li> -->
-            <li><a href="#" ng-click="">Night Mode <i class='ion-ios-moon-outline' style="position: absolute; left:121px; top:-9px; padding:5px !important; font-size:26px; font-weight:bold;" ></i></a>  </li>
+            <li><a href="#" ng-click="saveTheme()">Night Mode <i class='ion-ios-moon-outline' style="position: absolute; left:121px; top:-9px; padding:5px !important; font-size:26px; font-weight:bold;" ></i></a>  </li> <!-- nightModeIcon -->
 
 
 
