--- a/app/views/tempTools (old).html
+++ b/app/views/tempTools (old).html
@@ -379,86 +379,19 @@
           <!-- Buffer -->
           <li>
           <a class='dropdown-toggle dropdown-menu-form' data-toggle='dropdown' href="#" >Buffer</a>
-<!--             <ul class='dropdown-menu dropdown-menu-form'>
-              <li style="" class=""><select style="background-color: #222;" class="form-control btn btn-primary styleBox-variant" ng-model="layout" ng-change="saveTheme()" ng-options="layout.url as layout.name for layout in layouts"></select></li>
-            </ul> -->
 
             <ul class='dropdown-menu dropdown-menu-form'>
-              <!-- <li style="" class=""> -->
-
               
-              <!-- Buffer Units dropdown -->
-               <div class="dropdown customarrow">
-                  <b>Buffer in </b>
-                  <!-- <select class="coordsDropDown" ng-model="selectedOption" ng-options="coordOption.name for coordOption in coordOptions" ng-change="changeCoords(selectedOption)"> -->
-          <!--           <option value="stateplaneft" selected="selected">State Plane ft. </option>
-                    <option value="latlong">Lat / Long</option> -->
-                  <!-- </select> -->
-
-
-                  <select id="bufferUnitsSelectBox" style="width:50px; color:black;">
-                    <option value="UNIT_FOOT">ft.</option>
-                    <option value="UNIT_STATUTE_MILE">mi.</option>
-                    <option value="UNIT_KILOMETER">km.</option>
-                    <option value="UNIT_METER">m.</option>
-                    <option value="UNIT_NAUTICAL_MILE">naut mi.</option>
-                    <option value="UNIT_US_NAUTICAL_MILE">US naut mi.</option>
-                    <option value="UNIT_DEGREE">Degrees</option>
-                  </select><br />
 
 
 
-                </div>
-                <!-- Buffer Distance Input box -->
-                <!-- Buffer Distance(Ft):  -->
-                <!-- <input class="form-control" id="bufferDistanceInputBox" value=""  placeholder="500" type="text"/> -->
-                Distance:&nbsp;<input type="text" style="color:black;" id="bufferDistanceInputBox" size="5" value="25" />
+                <!-- BUFFER TOOL USED TO BE LOCATED HERE -->
 
 
 
-                <!-- Buffer Fill Checkbox -->
-                <input id="bufferFillBox" class="icon-checkbox weatherPosOverrides" type="checkbox" ng-model="theBufferFill" ng-change="bufferFillPass(theBufferFill);"/>
-                <label for="bufferFillBox">
-                  <span class='glyphicon glyphicon-unchecked unchecked chkPadding'></span>
-                  <span class='glyphicon glyphicon-check checked chkPadding'></span>
-                  Buffer Fill
-                </label>
 
-
-                <br><br>
-
-                <!-- Create / Clear Buffer -->
-                <input class="btn btn-primary form-control" id="bufferCreateBtn" value="Create" type="button" style="margin-bottom:5px;"></input>
-
-                <input class="form-control" id="bufferClearBtn" value="Clear" type="button"></input>
-
-
-                <br><br>
-
-                <!-- Buffer Description -->
-                <center><span style="font-size:12px;">Buffers the last graphic drawn on the Map </span></center>
-
-
-                <!-- <select style="background-color: #222;" class="form-control btn btn-primary styleBox-variant" ng-model="layout" ng-change="saveTheme()" ng-options="layout.url as layout.name for layout in layouts"></select> -->
-
-              <!-- </li> -->
             </ul>
           </li>
-
-
-
-
-
-
-
-
-
-
-
-          <!-- Spacer -->
-<!--           <div style="padding: 20px 30px 0;"></div> -->
-
-
 
 
 
