--- a/app/css/media-queries.css
+++ b/app/css/media-queries.css
@@ -7,9 +7,17 @@
 /* ----------------------------------------------------------- */
 /* ----------------------------------------------------------- */
 /* ----------------------------------------------------------- */
-/* 1200 and above (large) */
 
-@media (min-width: 1200px) {
+
+
+
+
+
+
+
+@media (min-width: 1460px) {
+
+
 
 
     #title {
@@ -24,6 +32,9 @@
 
 
 
+
+
+
     /* ensures the autocomplete active list items dont 
     overlay the bottom ul with no border radius */
     #tester>.dropdown-menu>.active>a {
@@ -31,28 +42,540 @@
     }
 
     #tester>.dropdown-menu {
-        /*width: 388px !important;*/
-        margin-left: -1px;
-        margin-right: 0px;
-
         margin-top: 0px !important;
         background-color: #fff;
-        border-bottom-left-radius: 0px !important;
-        border-bottom-right-radius: 0px !important;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
         border-top: 0px !important;
+        border-bottom: 1px solid #d9d9d9;
+        border-left: none !important;
+        border-right: none !important;
         box-shadow: none;
-        border-bottom: 0px;
         box-sizing: border-box;
 
         /* added */
-        width: 100% !important;
-        left:1px !important;
+        /*width: 100% !important;*/
+        /*left:1px !important;*/
+        /*left:0px !important;*/
+        left:0px !important;
+        right:0px !important;
     }
+    #tester > .dropdown-menu > li 
+    {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #tester > .dropdown-menu > li > a { 
+        padding: 3px 20px;
+        font-size:13px;
+        line-height: 1.428571429;
+        margin-left: 15px;
+    }
+    #tester > .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+        background-color: #e8e9ea !important;
+    }
+    .autocompleteCustom {
+        margin-left:0px !important;
+    }
+
+
+
 
     #tester>input {
         background: #fff;
     }
 
+    #tester>input:focus,
+    #tester>input:active,
+    #tester>input:hover {
+        background: #fff;
+        background-image: none;
+        color: #545454;
+        background: #f8f8f8;
+        border: none !important;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .input-group-btn {}
+
+    #searchBtn {
+        height: 49px;
+        width: 49px;
+        color:rgb(37, 83, 132) !important;
+/*        background-color: #f8f8f8 !important;
+        background: #f8f8f8 !important;
+        border-color: #f8f8f8 !important;*/
+        background-color: #fff !important;
+        background: #fff !important;
+        border-color: #fff !important;
+    }
+    #hamburgerBtn {
+        height: 49px;
+        width: 49px;
+        color:rgb(37, 83, 132) !important;
+        /*        background-color: #f8f8f8 !important;
+                background: #f8f8f8 !important;
+                border-color: #f8f8f8 !important;*/
+                background-color: #fff !important;
+                background: #fff !important;
+                border-color: #fff !important;
+        
+    }
+
+
+    /* navbar length for non-mobile screen sizes */
+    .navbar,
+    .navbar-header {
+        width: 0px;
+    }
+
+    /* fixed search size for desktop & tablet */
+    .searchSize {
+        /*width: 699px;*/
+        width: 382px;
+    }
+
+    /* $body adjust */
+    .dropdown-menu {}
+
+    .u-targetting-typeahead>.dropdown-menu {}
+
+    /* isolating the autocomplete dropdown for styling */
+    body>.dropdown-menu {
+        z-index: 999999 !important;
+        font-size: 20px !important;
+        background-color: black !important;
+        width: 385px !important;
+    }
+
+    body>.dropdown-menu>li {
+        border-top-right-radius: 0 !important;
+        border-top-left-radius: 0 !important;
+        border-bottom-right-radius: 0 !important;
+        border-bottom-left-radius: 0 !important;
+    }
+
+
+
+
+    /* size the logo for mobile */
+    #imgLogo {
+        display: inline-block;
+    }
+
+    #imgLogo_mobile {
+        display: none;
+    }
+
+
+
+
+
+    /* Conditional Visibilities */
+    /* desktop propInfo */
+    #PropInfoDialog {
+        display: block;
+    }
+    /* mobile propInfo */
+    .esriPopup {
+        display: none;
+    }
+    /* StreetView */
+    .conditionalShow_Street {
+        display: block;
+    }
+    /* Legend & Weather  */
+    .conditionalShow_LegWeather {
+        display: block;
+    }
+    .StreetList,
+    .LegList,
+    .WeatherList,
+    .valuationList {
+        pointer-events: auto;
+        opacity: 1;
+    }
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+/* 1200 and above (large) */
+@media (min-width: 1200px) and (max-width: 1459px) {
+
+
+
+    .draw-tools-container {
+
+        display: flex;
+        flex-wrap: wrap;
+        /*width:100px;*/
+
+        /*width:200px;*/
+
+        /*right:55px;*/
+
+    /*    position:absolute; 
+        top:7px; 
+        right:155px;*/
+
+    /*    float:right;*/
+
+
+        /*top:70px !important;*/
+
+        padding-right:10px !important;
+        /*margin-top:20px !important;*/
+        /*margin-top:50px !important;*/
+        /*margin-top:60px !important;*/
+        margin-top:45px !important;
+
+       /* padding-top:20px !important;*/
+
+        /*float:right;*/
+
+        right:0px !important;
+
+
+        /*margin-top:10px !important;*/
+        float:left !important;
+
+    }
+    .draw-tools-container-secondary {
+/*        padding-right:0px;
+        margin-top:-10px;
+
+        float:right;
+*/
+
+/*        position:absolute; 
+        top:7px; */
+        margin-top:35px;
+/*
+        float:right !important;*/
+
+        
+
+
+    }
+
+    .tool-header {
+/*        position: absolute;
+        left: 10px;
+        top: 0px;
+        */
+/*        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-weight: 500;
+        line-height: 1.1;
+        color: #ffffff;
+        background-color: rgb(37, 83, 132);
+        height: 65px;
+        overflow: hidden;
+        bottom: 0;
+        width:200px !important;
+        height: 100%;
+        white-space: normal;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 20px;*/
+
+        /*z-index:999999;*/
+
+/*        right:0px !important;
+        float:right;*/
+
+        /*width:200px !important;*/
+/*        height:800px !important;*/
+        width:100px !important;
+        height:100%  !important;
+
+        /*padding-top:50px !important;*/
+
+
+
+            /*padding:5px  !important;*/
+
+        -webkit-transition: all 0.30s linear;
+        -moz-transition: all 0.30s linear;
+        -ms-transition: all 0.30s linear;
+        -o-transition: all 0.30s linear;
+        transition: all 0.30s linear;
+
+
+    }
+
+
+    .ColorPallet {
+        margin-top:15px;
+        margin-left:0px !important;
+        padding-left:0px !important;
+
+    }
+/*    .ColorPallet {
+        font-size:20px;
+        padding-left:10px;
+
+    }*/
+    .rotateCaretIcon {
+
+/*        transform: rotateZ(90deg);
+
+
+        margin-left:-5px;
+        margin-right:5px;
+        margin-top:6px;
+
+        float:left;
+
+*/
+    }
+
+
+
+
+    .toolsDropDown {
+        position: absolute;
+        /* left: 385px; */
+
+        height:45px;
+        
+
+        /*top: 38px !important;*/
+        /*left: -1px !important;
+        top: 45px !important;*/
+        left: -1px !important;
+        bottom: 45px !important;
+        /*top: -5px !important;*/
+        /* line-height: 2.8; */
+        /* line-height: 2.6 !important; */
+        /* max-height: 100px !important; */
+        /*width: 50px !important;*/
+        font-size: 14px !important;
+        z-index: 999999999;
+    }
+    .toolsDropDownInner {
+/*        background-color: #0D2E56;
+        padding-left: 9px;
+        margin: 10px;
+        margin-top: 6px;
+        line-height: 2.4;*/
+
+        /*margin: 5px !important;*/
+
+        /*padding-left: 5px !important;*/
+        width: 85px !important;
+        /*width: auto !important;*/
+/*        border: 0px solid white;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: Nunito,Helvetica Neue,Helvetica,Arial,sans-serif;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;*/
+    }
+
+
+    .drawtoolicon {
+    /*    font-size:18px;
+        margin-right:2px;
+        margin-top:2px;*/
+        /*padding:5px;*/
+
+        font-size: 16px;
+        /*padding-left: -8px !important;*/
+
+    }
+    .drawtooliconShapes {
+        /*margin-right: 4px;*/
+        /*margin-right: 0px;*/
+        margin-left: 4px !important;
+        margin-right: 4px !important;
+    }
+
+
+
+
+
+    .closeToolIcon {
+        position: absolute;
+        /* left: 385px; */
+        
+        right: 92px !important;
+        top: -5px !important;
+
+        background-color: rgb(37, 83, 132);
+
+        padding:15px;
+        padding-top:26px;
+        /*padding-bottom:26px;*/
+        border-radius: 5px;
+        
+    }
+
+
+
+
+
+
+
+
+    #LocateButton {
+/*        position: absolute;*/
+        /* z-index: 2; */
+/*        z-index: 999999999;
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;*/
+/*        bottom: 84px;
+        right: 20px;*/
+        /*bottom: 62px !important;*/
+
+        bottom: 0px !important;
+        right: 0px !important;
+        box-shadow: none !important;
+    }
+    .locateContainer {
+         /*box-shadow: none !important; */
+         /*box-shadow: 0 0px 0px rgba(0,0,0,0.3)  !important; */
+    }
+    .LocateButton .zoomLocateButton {
+        /*box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);*/
+        box-shadow: none !important;
+    }
+    .esriSimpleSliderBR {
+/*        bottom: 0px;
+        right: 0px;*/
+
+        bottom: -20px;
+        right: 50px;
+
+        height:70px !important;
+/*        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;*/
+        box-shadow: none !important;
+
+        transform: rotateZ(270deg);
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    #title {
+        outline-style: none;
+/*        margin-left: -13px;
+        padding-right: 45px;*/
+        background-color: transparent !important;
+    }
+    .navbar-brand {
+        padding:0px;
+    }
+
+
+
+
+
+
+
+
+
+    /* ensures the autocomplete active list items dont 
+    overlay the bottom ul with no border radius */
+    #tester>.dropdown-menu>.active>a {
+        border-radius: 0px !important;
+    }
+
+    #tester>.dropdown-menu {
+        margin-top: 0px !important;
+        background-color: #fff;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
+        border-top: 0px !important;
+        border-bottom: 1px solid #d9d9d9;
+        border-left: none !important;
+        border-right: none !important;
+        box-shadow: none;
+        box-sizing: border-box;
+
+        /* added */
+        /*width: 100% !important;*/
+        /*left:1px !important;*/
+        /*left:0px !important;*/
+        left:0px !important;
+        right:0px !important;
+    }
+    #tester > .dropdown-menu > li 
+    {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #tester > .dropdown-menu > li > a { 
+        padding: 3px 20px;
+        font-size:13px;
+        line-height: 1.428571429;
+        margin-left: 15px;
+    }
+    #tester > .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+        background-color: #e8e9ea !important;
+    }
+    .autocompleteCustom {
+        margin-left:0px !important;
+    }
+
+
+
+    #tester>input {
+        background: #fff;
+    }
     #tester>input:focus,
     #tester>input:active,
     #tester>input:hover {
@@ -68,6 +591,13 @@
 /*        abafb5*/
 
     }
+
+
+
+
+
+
+
 
 
 
@@ -202,24 +732,47 @@
     }
 
     #tester>.dropdown-menu {
-        width: 388px !important;
-        margin-left: -1px;
-        margin-right: 0px;
-
         margin-top: 0px !important;
         background-color: #fff;
-        border-bottom-left-radius: 0px !important;
-        border-bottom-right-radius: 0px !important;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
         border-top: 0px !important;
+        border-bottom: 1px solid #d9d9d9;
+        border-left: none !important;
+        border-right: none !important;
         box-shadow: none;
-        border-bottom: 0px;
         box-sizing: border-box;
+
+        /* added */
+        /*width: 100% !important;*/
+        /*left:1px !important;*/
+        /*left:0px !important;*/
+        left:0px !important;
+        right:0px !important;
     }
+    #tester > .dropdown-menu > li 
+    {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #tester > .dropdown-menu > li > a { 
+        padding: 3px 20px;
+        font-size:13px;
+        line-height: 1.428571429;
+        margin-left: 15px;
+    }
+    #tester > .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+        background-color: #e8e9ea !important;
+    }
+    .autocompleteCustom {
+        margin-left:0px !important;
+    }
+
+
 
     #tester>input {
         background: #fff;
     }
-
     #tester>input:focus,
     #tester>input:active,
     #tester>input:hover {
@@ -231,6 +784,13 @@
 
         border: none !important;
     }
+
+
+
+
+
+
+
 
 
     .input-group-btn {}
@@ -303,7 +863,8 @@
     /* Map Legend & Weather blocks */
     #legendDivCasing,
     #weatherDivCasing,
-    #valuationDivCasing {
+    #valuationDivCasing,
+    #toolDivCasing {
         width: 230px !important;
     }
 
@@ -364,6 +925,11 @@
         padding:0px;
     }
 
+
+
+
+
+
     /* ensures the autocomplete active list items dont 
     overlay the bottom ul with no border radius */
     #tester>.dropdown-menu>.active>a {
@@ -371,24 +937,47 @@
     }
 
     #tester>.dropdown-menu {
-        width: 388px !important;
-        margin-left: -1px;
-        margin-right: 0px;
-
         margin-top: 0px !important;
         background-color: #fff;
-        border-bottom-left-radius: 0px !important;
-        border-bottom-right-radius: 0px !important;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
         border-top: 0px !important;
+        border-bottom: 1px solid #d9d9d9;
+        border-left: none !important;
+        border-right: none !important;
         box-shadow: none;
-        border-bottom: 0px;
         box-sizing: border-box;
+
+        /* added */
+        /*width: 100% !important;*/
+        /*left:1px !important;*/
+        /*left:0px !important;*/
+        left:0px !important;
+        right:0px !important;
     }
+    #tester > .dropdown-menu > li 
+    {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #tester > .dropdown-menu > li > a { 
+        padding: 3px 20px;
+        font-size:13px;
+        line-height: 1.428571429;
+        margin-left: 15px;
+    }
+    #tester > .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+        background-color: #e8e9ea !important;
+    }
+    .autocompleteCustom {
+        margin-left:0px !important;
+    }
+
+
 
     #tester>input {
         background: #fff;
     }
-
     #tester>input:focus,
     #tester>input:active,
     #tester>input:hover {
@@ -398,6 +987,12 @@
         background: #f5f5f5;
         border: none !important;
     }
+
+
+
+
+
+
 
     .input-group-btn {}
 
@@ -524,6 +1119,18 @@
     }
 
 
+/*    #hamburgerBtn
+
+
+    #searchBtn-holder2 {
+
+    }*/
+
+/*    #searchBtn-holder2 {
+        visibility:hidden;
+    }
+*/
+
 
 
 
@@ -637,18 +1244,48 @@
     }
 
     #tester>.dropdown-menu {
-        width: 388px !important;
-        margin-left: -1px;
-        margin-right: 0px;
+/*        width: 388px !important;*/
+/*        margin-left: -1px;
+        margin-right: 0px;*/
+
+/*        margin-top: 0px !important;
+        background-color: #fff;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
+        border-top: 0px !important;
+        border-bottom: 2px solid rgba(0,0,0,.15) !important;
+        border-left: 2px solid rgba(0,0,0,.15) !important;
+        border-right: 2px solid rgba(0,0,0,.15) !important;
+        box-shadow: none;
+        box-sizing: border-box;*/
+
+
+
+
+
+        /*width: 388px !important;*/
+    /*        margin-left: -1px;
+        margin-right: 0px;*/
 
         margin-top: 0px !important;
         background-color: #fff;
-        border-bottom-left-radius: 0px !important;
-        border-bottom-right-radius: 0px !important;
+        border-bottom-left-radius: 3px !important;
+        border-bottom-right-radius: 3px !important;
         border-top: 0px !important;
+        border-bottom: 2px solid rgba(0,0,0,.15) !important;
+        border-left: 2px solid rgba(0,0,0,.15) !important;
+        border-right: 2px solid rgba(0,0,0,.15) !important;
         box-shadow: none;
-        border-bottom: 0px;
         box-sizing: border-box;
+
+        /* added */
+        width: 100% !important;
+        left:43px !important;
+        /*left:1px !important;*/
+/*        left:0px !important;
+        right:0px !important;*/
+
+
     }
 
     #tester>input {
