--- a/app/css/themes/layout-county.css
+++ b/app/css/themes/layout-county.css
@@ -355,7 +355,7 @@ transition: .3s ease all;
     /*color: #DEDEDE !important;*/
 /*    color: #fff !important;
 */
-    color: #DEDEDE !important;
+    color: #DEDEDE;
 
 
 /*    background-color: black !important;*/
@@ -470,32 +470,66 @@ color: #ADADAD !important;
 /*        background-color: #0D2E56;
             border-color: #0D2E56;*/
 
-            background-color: rgb(17, 63, 112);
-                border-color: rgb(17, 63, 112);
+/*            background-color: rgb(17, 63, 112);
+                border-color: rgb(17, 63, 112);*/
 
-            
+            /*background-color: rgb(248, 248, 248);*/
+            /*background-color: #fff;*/
+            background-color: #f8f8f8 !important;
+            border: none;
+            /*border-color: rgb(248, 248, 248);*/
 
+            color:#3b454e;
+            border: 1px solid #f8f8f8;
 
         /*#0D2E56*/
 }
 
 .esriSimpleSliderDecrementButton:hover, .esriSimpleSliderIncrementButton:hover {
-        background-color: #0D2E56;
+/*        background-color: #0D2E56;*/
+        /*background-color: rgb(248, 248, 248);*/
+        /*background-color: #3b454e;*/
+        background: #3b454e !important;
+
+        background-color: #3b454e !important;
+
+        
+/*        border-color: rgb(248, 248, 248);*/
+      border: none;
+      /*color:#3b454e;*/
+      /*color:rgb(248, 248, 248) !important;*/
 }
 
 
 .esriSimpleSliderDisabledButton, .esriSimpleSliderDisabledButton:active, .esriSimpleSliderDisabledButton:hover {
     cursor: default;
     /*background-color: #262020;*/
-    background-color: #0D2E56 !important;
+    /*background-color: #0D2E56 !important;*/
+    /*background-color: rgb(248, 248, 248) !important;*/
+    background-color: #3b454e !important;
     /*border-color: #333;*/
-    border-color: #0D2E56;
+    /*border-color: #0D2E56;*/
+    /*border: none;*/
     border-radius: 0px;
+    /*color:#3b454e;*/
+    color:rgb(248, 248, 248) !important;
 }
 
 
 
+.esriSimpleSliderVertical .esriSimpleSliderIncrementButton, .esriSimpleSliderVertical .esriSimpleSliderDecrementButton {
+/*            background-color: rgb(248, 248, 248) !important;
+            border-color: rgb(248, 248, 248) !important;*/
+            /*background-color: #3b454e !important;*/
+            /*background-color: #fff !important;*/
+            background-color: #f8f8f8 !important;
+            /*border-color: #3b454e !important;*/
+            border: 1px solid #f8f8f8;
 
+            /*color:#3b454e !important;*/
+            /*color:rgb(248, 248, 248) !important;*/
+            color: #3b454e;
+}
 
 
 
@@ -545,7 +579,7 @@ color: #ADADAD !important;
 
 
 
-#weatherDivCasing, #legendDivCasing, #measureDivCasing, #valuationDivCasing {
+#weatherDivCasing, #legendDivCasing, #measureDivCasing, #valuationDivCasing, #toolDivCasing {
 
   background-color: rgba(17, 63, 112, 0.96);
 }
