--- a/app/css/themes/media-queries-county.css
+++ b/app/css/themes/media-queries-county.css
@@ -15,7 +15,7 @@
               #tester > .dropdown-menu
               {
                   padding: 5px;
-                box-shadow: 0.5px 3px 4px rgba(0, 0, 0, 0.40);
+                  box-shadow: 0.5px 3px 4px rgba(0, 0, 0, 0.40);
                   position: absolute;
                   top: 100%;
                   left: 0;
@@ -27,41 +27,29 @@
                   font-size: 14px;
                   list-style: none;
                   background-clip: padding-box;
-                color:gray !important;
-                margin-top:3px;
+                  margin-top:3px;
                   -webkit-border-radius:0px;
                   -moz-border-radius:0px;
                   border-radius:0px;
-                border-top: 0px solid #ababab;
-  /*              border-bottom: 2px solid #47a3da;*/
-                border-bottom: 2px solid #3c8ed2;
+                  border-top: 0px solid #ababab;
+                  border-bottom: 2px solid #3c8ed2;
 
 
 
                 z-index:999999 !important;
-                /*background-color:#222 !important;*/
-                /*background-color:#0D2E56 !important;*/
-                background-color:rgb(17, 63, 112) !important; /* change for theme */
-                
+                /*background-color:rgb(17, 63, 112) !important;*/ /* change for theme */
+                /*background-image: url(images/greyBG.jpg) !important;*/
+
+                background-color: #f8f8f8 !important;
 
                 
-                /*background-color: rgb(17, 63, 112) !important;*/
-/*                    border-color: rgb(17, 63, 112);*/
-
                 color:gray !important;
-
-  /*              width: 158% !important;*/
-  /*              width: 200% !important;*/ /* OLD VAL before switch to 'O' logo */
-  /*              margin-left: -137px;*/ /* OLD VAL before switch to 'O' logo */
-  /*              margin-right: 30px;*/ /* OLD VAL before switch to 'O' logo */
 
                 width: 200% !important; 
                 margin-left: -53px; 
                 margin-right: 30px; 
 
                 margin-top:5px !important;
-
-
 
                 -webkit-transition: all 0.30s linear;
                 -moz-transition: all 0.30s linear;
@@ -73,25 +61,18 @@
               }
               #tester > .dropdown-menu > li 
                 {
-                  /*background-color:#222 !important;*/
-                  background-color:rgb(17, 63, 112) !important; /* change for theme */
+
+                  /*background-color:rgb(17, 63, 112) !important;*/ /* change for theme */
+                  /*background-image: url(images/greyBG.jpg) !important;*/
                   color:gray !important;
                   border-top-right-radius: 0 !important;
                   border-top-left-radius: 0 !important;
                   border-bottom-right-radius: 0 !important;
                   border-bottom-left-radius: 0 !important;
-  /*                        margin-left: 2px;*/
-  /*                        margin-left: -7px;*/
-  /*                        margin-right: 0px;*/
 
-  /*                        margin-left: 2px;
-                          margin-right: 3px;*/
-
-
-                          margin-left: -5px;
-  /*                        width:111% !important;*/
-  /*                  width:150% !important;*/
-
+                          margin-left: -10px;
+                          /*margin-right: 55px;*/
+                          /*width:80%;*/
 
 
                 }
@@ -104,16 +85,12 @@
 
                     line-height: 1.428571429;
 
-                  color:#D9F0F0 !important;
+                    margin-left: 15px;
+                    /*margin-right: -55px;*/
+                    /*width:80%;*/
 
-                 /* margin-left: -7px;*/
-
-  /*                margin-left: -2px;
-                  margin-right: -100px !important;*/
-
-  /*                width: 158% !important;*/
-
-  /*                width:87% !important;*/
+                  /*color:#D9F0F0 !important;*/
+                  color:#555555 !important;
 
 
                     white-space: nowrap;
@@ -133,10 +110,14 @@
                 }
 
               #tester > .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
-  /*                color:black !important;*/
-                  /*background-color: #333 !important;*/
-                  background-color: #0D2E56 !important; /* change for theme */
-                  /*background-color: rgb(17, 63, 112) !important;*/  
+
+                  /*background-color: #0D2E56 !important; *//* change for theme */ 
+                  /*background-color: hsla(0,0%,100%,.9) !important;*/
+                  /*background-image: url(images/greyBG.jpg) !important;*/
+
+                  /*background-color: #f8f8f8 !important;*/
+                  background-color: #e8e9ea !important;
+
                 }
 
 
