--- a/app/views/tempSelProp.html
+++ b/app/views/tempSelProp.html
@@ -52,14 +52,14 @@
 
 
                      <p class="spF1"><b>Parcel:</b> {{attr.parcel}}</p>
-                     <p class="spF2"><b>Owner Name(s):</b> {{data.OwnerName}}</p>
-                     <p class="spF3"><b>Site Address:</b> {{data.SiteAddress}}</p>
+                     <p ng-hide="data.OwnerName.length === 0 || data.OwnerName.indexOf('null')!=-1" class="spF2"><b>Owner Name(s):</b> {{data.OwnerName}}</p>
+                     <p ng-hide="data.SiteAddress.length <= 3 || data.SiteAddress.indexOf('null')!=-1" class="spF3"><b>Site Address:</b> {{data.SiteAddress}}</p>
                      <p class="spF4"><b>Jurisdiction:</b> {{zoning.jurisdiction}} - {{data.ZipCode}}</p>
                      <p class="spF5"><b>Sale Date:</b> {{data.SaleDate}}</p>
                      <p class="spF6"><b>Sale Price:</b> {{data.SalePrice}}</p>
-                     <p class="spF7"><b>Estimated Lot Size:</b> {{data.CalcAcres}}</p>
-                     <p class="spF8"><b>Construction Year:</b> {{data.ConsructionYear}}</p>
-                     <p class="spF9"><b>Recorded Doc Number:</b> 
+                     <p ng-hide="data.CalcAcres.length === 0 || data.CalcAcres.indexOf('null')!=-1"   class="spF7"><b>Estimated Lot Size:</b> {{data.CalcAcres}}</p>
+                     <p ng-hide="data.ConsructionYear.length === 0 || data.ConsructionYear.indexOf('null')!=-1" class="spF8"><b>Construction Year:</b> {{data.ConsructionYear}}</p>
+                     <p ng-hide="data.DocNumber.indexOf('null')!=-1" class="spF9"><b>Recorded Doc Number:</b> 
                        <a class="infoLinks" target="_blank" href='http://gisgate.co.clark.nv.us/assessor/webimages/default.asp?appID=1&txtdocNum={{data.DocNumber}}'>{{data.DocNumber}}</a>
                      </p>
                      <p class="spF10"><b>Aerial Flight Date:</b> {{aerialDate}}</p>
@@ -70,25 +70,26 @@
                      <accordion-heading >
                         <div>
 
-
-
                         <!-- ionic -->
                         <span class="iconic-adjust-11 ion-crop" data-pack="default" data-tags="images, levels, light, dark, settings"></span>
-
                          Zoning and Planned Landuse 
                         </div>
                      </accordion-heading>
                      <p>
      
-                     <p><b>Zoning Classification:</b> 
+                     <p ng-hide="zoning.zoneDescription.indexOf('null')!=-1" ><b>Zoning Classification:</b> 
                        <a class="infoLinks" target="_blank" href='{{ZonePLU.ZoneLink}}'>{{zoning.zoneDescription}}</a>
                      </p>
 
-                     <p ><b>Overlay District:</b>   </p> <!-- {{PLU.CommunityDistrict}} --> <!-- ng-show="matchCount==1" -->
-                     <p ><b>Planned Landuse:</b>   </p> <!-- {{PLU.CommunityDistrict}} -->
-                     <p ng-show="land.length"><b>Land Use Plan Area:</b> <span>{{land.LandUsePlanArea}}</span> </p> 
+                     <p ng-hide="Overlays.AirZones.subd1.indexOf('null')!=-1" ><b>Overlay District:</b> {{Overlays.AirZones.subd1 }}  </p> 
+                     <p ng-hide="thePLU.PLUDescription.indexOf('null')!=-1" ><b>Planned Landuse:</b> {{thePLU.PLUDescription }} </p> <!-- {{PLU.CommunityDistrict}} -->
+
+
+                     <p ng-hide="land.LandUsePlanArea.length === 0"><b>Land Use Plan Area:</b> <span>{{land.LandUsePlanArea}}</span> </p> <!-- ng-show="land.length" -->
                      <!-- <p ng-if="q.length === 0"><b>Land Use Plan Area:</b> {{q.LandUsePlanArea}} </p>  --><!-- {{PLU.CommunityDistrict}} --> 
                      <!-- ng-show="!land.LandUsePlanArea" -->
+
+                     <!-- ng-show="land.LandUsePlanArea.length" -->
 
 
                      <!-- Contests (search active) -->
@@ -96,17 +97,8 @@
                          <h1>{{q.LandUsePlanArea}}</h1>
                      </p> -->
 
-
-
                      <p><b>Community District:</b> {{PLU.CommunityDistrict}}</p> <!-- {{PLU.CommunityDistrict}} -->
 
-
-
-
-                     <!-- <p><b>Community District:</b> {{PLU.CommunityDistrict}}</p> --> <!-- {{PLU.CommunityDistrict}} -->
-
-
-                     <!-- </p> -->
                  </accordion-group>
 
                  <!-- Legal Descr. -->
@@ -121,12 +113,21 @@
                          Legal Description 
                         </div>
                      </accordion-heading>
-                     <p><b>Subdivision Name:</b> {{data.SubName}}</p>
-                     <p><b>Book Page:</b> {{data.AssessorBook}} {{data.AssessorPage}}</p>
-                     <p><b>Lot Block:</b> {{data.LotBlock}}</p>
+                     <!-- ng-show="data.AssessorBook.length" -->
+
+
+                     <p ng-hide="data.SubName.indexOf('null')!=-1"><b>Subdivision Name:</b> {{data.SubName}}</p>
+                     <p ng-hide="data.AssessorBook.indexOf('null')!=-1 || data.AssessorBook.length === 0"><b>Book Page:</b> {{data.AssessorBook}} {{data.AssessorPage}}</p> <!-- ng-hide="data.AssessorBook.length === 0" -->
+
+                     <!-- ng-hide="data.AssessorBook.length === 0"  -->
+
+                     
+                     <!-- <p><b>Lot Block:</b> {{data.LotBlock}}</p> -->
+
+                     <p ng-hide="data.SubName.indexOf('null')!=-1"><b>Lot Block:</b> {{data.LotBlock}}</p>
                      <p><b>T-R-S:</b> {{data.TownshipRangeSection}}</p>
-                     <p><b>Tax District:</b> {{data.taxDistrict}}</p>
-                     <p><b>Census Tract:</b> {{ }}</p>
+                     <p ng-hide="data.taxDistrict.indexOf('null')!=-1"><b>Tax District:</b> {{data.taxDistrict}}</p>
+                     <p><b>Census Tract:</b> {{land.Tract}}</p>
                      </p>
                  </accordion-group>
 
@@ -217,7 +218,7 @@
                       </accordion-heading>
 
                       <p><b>Commissioner: </b> &nbsp; {{elecOfficial.CountyCommissioner}}</p>  
-                      <p><b>City Ward: </b> &nbsp; {{elecOfficial.CityWard}}</p>  
+                      <p ng-hide="elecOfficial.CityWard.length === 0"><b>City Ward: </b> &nbsp; {{elecOfficial.CityWard}}</p>  
                       <p><b>U.S. Senate: </b> &nbsp; {{elecOfficial.Senate}}</p>  
                       <p><b>U.S. Congress: </b> &nbsp; {{elecOfficial.Congress}}</p>  
                       <p><b>State Senate: </b> &nbsp; {{elecOfficial.StateSenate}}</p>  
@@ -226,6 +227,7 @@
                       <p><b>University Regent: </b> &nbsp; {{elecOfficial.UniversityRegent}}</p>  
                       <p><b>Board of Education: </b> &nbsp; {{elecOfficial.BoardOfEducation}}</p>  
                       <p><b>Minor Civil Division: </b> &nbsp; {{land.MinorCivilDivision}}</p>  
+                      <p ng-hide="land.PlaceName.length === 0"><b>Township: </b> &nbsp; {{land.PlaceName }}</p>  
 
                   </accordion-group>
 
