--- a/app/views/tempIntroduction.html
+++ b/app/views/tempIntroduction.html
@@ -60,7 +60,8 @@
 
 
                    <div ng-show="result.statusmsg" class="alert-info-custom" style="">
-                     <a href="#" ng-click="assistWhatsComing(result.name,result.statustext)" class="alert-link" style="color: #DEDEDE; font-size:11px; padding:7px; padding-top:10px;">more...</a>
+                     <a href="#" ng-click="assistWhatsComing(result.name,result.statustext)" class="alert-link" style="padding:7px;">more...</a>
+                     <!-- font-size:11px; padding:7px; padding-top:10px; margin-top:20px; -->
                    </div>
 
                </p>
