--- a/app/css/themes/layout-county.css
+++ b/app/css/themes/layout-county.css
@@ -475,6 +475,8 @@ color: #ADADAD !important;
 
             /*background-color: rgb(248, 248, 248);*/
             /*background-color: #fff;*/
+
+            /*background-color: rgb(17, 63, 112) !important;*/
             background-color: #f8f8f8 !important;
             border: none;
             /*border-color: rgb(248, 248, 248);*/
